# Axion-Strings

./: 2Dexample.ipynb  CMakeLists.txt  Laplacian.py  PQnew.ipynb  Plot.py  README.md  StringID.py  default.param  strings.py
coefficient_matrix_files/: coefficient_matrix.nb
cpp/: Makefile  init.cpp  init.h  input.h  main.cpp  spatial.cpp  spatial.h  stringID.cpp
output_files/: analysis.ipynb  analysis.py
src/: CMakeLists.txt  default.param  init.cpp  main.cpp  param.param  parameters.h  physics.cpp
src/amr/: amr_helper.cpp  amr_hierarchy.cpp  amr_integrate.cpp  amr_interface.hpp  amr_internal.hpp  amr_point_clustering.cpp  amr_run.cpp
src/common/: common.hpp  fileio.cpp  init.cpp  mkl_wrapper.cpp  physics.cpp  pk_estimation.cpp  read_parameters.cpp  string_finding.cpp
src/standard/: common.h  evolve.cpp  evolve.h  fileio.cpp  init.cpp  init.h  integrate.cpp  mkl_wrapper.cpp  physics.cpp  run.cpp  s_integrate.cpp  s_interface.hpp  s_internal.hpp  s_run.cpp  s_util.cpp  spatial.cpp  spatial.h  stringID.cpp  stringID.h  string_finding.cpp
src/tests/: amr_tests.cpp  fdm_matrix.cpp  laplacian.cpp  test_parameters.cpp  test_parameters.param  test_standard.cpp
src/utils/: fileutil.cpp  mmio.cpp  mmio.h  read_mtx.cpp  read_parameters.cpp  utils.h
